# gmail-ai-agent

./: README.md  pyproject.toml  requirements.txt
src/: agent.py  email_listener.py  gmail_integrator.py  main.py
